removed the background-image, and changed the colors

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
    <div class="projetos" id="projectsplace">
        <h2>Projects</h2>
        <div class="sites">
-           <div class="contorno"><a href="#">Project 1</a></div>
-           <div class="contorno"><a href="#">Project 2</a></div>
-           <div class="contorno"><a href="#">Project 3</a></div>
-           <div class="contorno"><a href="#">Project 4</a></div>
-           <div class="contorno"><a href="#">Project 5</a></div>
+           <div class="contorno"><a class="projectcolor" href="#">Project 1</a></div>
+           <div class="contorno"><a class="projectcolor"  href="#">Project 2</a></div>
+           <div class="contorno"><a class="projectcolor"  href="#">Project 3</a></div>
+           <div class="contorno"><a class="projectcolor"  href="#">Project 4</a></div>
+           <div class="contorno"><a class="projectcolor"  href="#">Project 5</a></div>
        </div>
 
 
@@ -41,8 +41,8 @@
 
    
 
-   <footer id="contactplace">
-        <p><a href="mailto:rafaellamgsouza@gmail.com">Contact me</a></p>
+   <footer>
+        <p class="footerclass"><a href="mailto:rafaellamgsouza@gmail.com">Contact me</a></p>
    </footer>
 
 </body>
