--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>30days30sites</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Faustina|Great+Vibes" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Gaegu|Markazi+Text" rel="stylesheet"> 
     <script src="main.js"></script>
 </head>
 <body>
@@ -27,9 +27,11 @@
    </div>
  
    <div class="projetos" id="projectsplace">
-       <h2>Projects</h2>
+       <h2><u>Projects</u></h2>
        <div class="sites">
-           <div class="contorno"><a class="projectcolor" href="#">Project 1</a></div>
+           <div class="contorno"><a href="dia2/invitation.html">
+            <img border="0" alt="Site 2 - invitation" src="ScreenshotInvitation.png" width="100" height="100">
+            </a></div>
            <div class="contorno"><a class="projectcolor"  href="#">Project 2</a></div>
            <div class="contorno"><a class="projectcolor"  href="#">Project 3</a></div>
            <div class="contorno"><a class="projectcolor"  href="#">Project 4</a></div>
