new folder and site of the challeng, 30 days 30 sites

--- a/index.html
+++ b/index.html
@@ -1,51 +1,78 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>30days30sites</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Gaegu|Markazi+Text" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Gaegu|Markazi+Text" rel="stylesheet">
     <script src="main.js"></script>
 </head>
+
 <body>
-   <header>
-       <h1 class="nomesite">Rafaella Souza</h1>
-       <nav>
-           <ul>
-               <li class="remove"><a href="#homeplace">Home</a></li>
-               <li><a href="#projectsplace">Projects</a></li>
-               <li><a href="#contactplace">Contact</a></li>
-           </ul>
-       </nav>
-   </header> 
-   <div class="container" id="homeplace">
-       <p>Hello, there! <br>
-        My name is Rafaella and i'm diving into the world of coding. To help me improve my skills I've joined the challenge <a href="https://www.subscribepage.com/30days30sites">30 Days, 30 Sites</a>, and I'll be updating this page with the work done during this time. If you have any tips, advices os just want to talk about my sites my email is on the bottom of the page.  
-       </p>
-   </div>
- 
-   <div class="projetos" id="projectsplace">
-       <h2><u>Projects</u></h2>
-       <div class="sites">
-           <div class="contorno"><a href="dia2/invitation.html">
-            <img border="0" alt="Site 2 - invitation" src="ScreenshotInvitation.png" width="100" height="100">
-            </a></div>
-           <div class="contorno"><a class="projectcolor"  href="#">Project 2</a></div>
-           <div class="contorno"><a class="projectcolor"  href="#">Project 3</a></div>
-           <div class="contorno"><a class="projectcolor"  href="#">Project 4</a></div>
-           <div class="contorno"><a class="projectcolor"  href="#">Project 5</a></div>
-       </div>
+    <header>
+        <h1 class="nomesite">Rafaella Souza</h1>
+        <nav>
+            <ul>
+                <li class="remove">
+                    <a href="#homeplace">Home</a>
+                </li>
+                <li>
+                    <a href="#projectsplace">Projects</a>
+                </li>
+                <li>
+                    <a href="#contactplace">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container" id="homeplace">
+        <p>Hello, there!
+            <br> My name is Rafaella and i'm diving into the world of coding. To help me improve my skills I've joined the challenge
+            <a href="https://www.subscribepage.com/30days30sites">30 Days, 30 Sites</a>, and I'll be updating this page with the work done during this time. If you have any tips,
+            advices os just want to talk about my sites my email is on the bottom of the page.
+        </p>
+    </div>
+
+    <div class="projetos" id="projectsplace">
+        <h2>
+            <u>Projects</u>
+        </h2>
+        <div class="sites">
+            <div>
+                <a href="dia2/invitation.html">
+                    <img alt="Site 2 - invitation" src="ScreenshotInvitation.png">
+                </a>
+            </div>
+            <div>
+                <a href="dia3/touristicattraction.html">
+                    <img src="Screenshot-2018-7-3 Touristic Attraction.png" alt="Site 3 - touristict attraction">
+                </a>
+            </div>
+            <div>
+                <a class="projectcolor" href="#">Project 3</a>
+            </div>
+            <div>
+                <a class="projectcolor" href="#">Project 4</a>
+            </div>
+            <div>
+                <a class="projectcolor" href="#">Project 5</a>
+            </div>
+        </div>
 
 
-   </div>
+    </div>
 
-   
 
-   <footer>
-        <p class="footerclass"><a href="mailto:rafaellamgsouza@gmail.com">Contact me</a></p>
-   </footer>
+
+    <footer>
+        <p class="footerclass" id="contactplace">
+            <a href="mailto:rafaellamgsouza@gmail.com">Contact me</a>
+        </p>
+    </footer>
 
 </body>
+
 </html>
